--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,33 @@
 Package: coinsR
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Title: Using COinS To Generate Bibliographic Metadata For Your Website 
+Version: 0.0.0.9000
+Authors@R:
+    person("Peter", "Baumgartner", email = "petzi53@gmail.com", 
+    role = c("aut", "cre"), comment = c(ORCID = "0000-0003-4526-8791"))
+Description: Generate bibliographic metadata for your (blogdown / Hugo) 
+    website using COinS (Context Object in Spans).
+License: GPL-3
 Encoding: UTF-8
+RoxygenNote: 6.1.1
+Suggests:
+    knitr,
+    rmarkdown
+VignetteBuilder: 
+    knitr,
+    rmarkdown
+Imports:
+    base,
+    bookdown,
+    lubridate,
+    readr,
+    rstudioapi,
+    stringr,
+    xfun,
+    yaml
+Depends:
+    blogdown
 LazyData: true
+URL: https://github.com/petzi53/coinsR
+BugReports: https://github.com/petzi53/coinsR/issues
+SystemRequirements: Hugo (<https://gohugo.io>) and Pandoc (<https://pandoc.org>
